<resources>
    <string name="app_name">App</string>
    <string name="user_name">User Name</string>
    <string name="city">City</string>
    <string name="enter_text">Enter Text ...</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="reset">Reset</string>
    <string name="down">Down</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_btn">Login</string>
    <string name="don_t_have_account_create_new_account">Do not have account ? Create new Account?</string>
    <string name="write_some_thing_here">Write some thing here</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="register_btn">Register</string>
    <string name="already_have_new_account">Already have new Account?</string>
    <string name="savebtn">Save</string>
    <string name="hobby">Hobby</string>
    <string name="profesion">Profesion</string>
    <string name="send_request">Send Request</string>
    <string name="decline_request">Decline Request</string>
    <string name="email" >Email</string>
    <string name="password">Password</string>
</resources>